# http-parse

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/http_parse/: __init__.py  _parser.py
